Add non overlapping P8 portfolio validation
